<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageButton
        android:id="@+id/btn_account"
        android:layout_width="@dimen/medium_icon_width"
        android:layout_height="@dimen/medium_icon_height"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/ic_account" />


    <TextView
        android:id="@+id/text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        app:layout_constraintEnd_toEndOf="@+id/btn_account"
        app:layout_constraintStart_toStartOf="@+id/btn_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="@+id/btn_share"
        app:layout_constraintStart_toStartOf="@+id/btn_share"
        app:layout_constraintTop_toBottomOf="@+id/btn_share" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn"
        app:layout_constraintEnd_toEndOf="@+id/btn_learn"
        app:layout_constraintStart_toStartOf="@+id/btn_learn"
        app:layout_constraintTop_toBottomOf="@+id/btn_learn" />

    <ImageButton
        android:id="@+id/btn_learn"
        android:layout_width="@dimen/medium_icon_width"
        android:layout_height="@dimen/medium_icon_height"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/btn_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_share"
        app:layout_constraintTop_toTopOf="@+id/btn_share"
        app:srcCompat="@drawable/ic_book" />

    <ImageButton
        android:id="@+id/btn_share"
        android:layout_width="@dimen/medium_icon_width"
        android:layout_height="@dimen/medium_icon_height"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_learn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_account"
        app:srcCompat="@drawable/ic_system_update_black_48dp" />
</androidx.constraintlayout.widget.ConstraintLayout>