...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.share.p2p.WifiDirectActivity">

    <ImageButton
        android:id="@+id/btn_receive"
        android:layout_width="@dimen/medium_icon_width"
        android:layout_height="@dimen/medium_icon_height"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/ic_system_update_black_48dp"
        android:background="?android:selectableItemBackground"/>

    <ImageButton
        android:id="@+id/btn_send"
        android:layout_width="@dimen/medium_icon_width"
        android:layout_height="@dimen/medium_icon_height"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/text_receive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
