<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/im_account"
        android:layout_width="@dimen/largest_logo_width"
        android:layout_height="@dimen/large_logo_height"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/ic_account" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="@dimen/medium_icon_width"
        android:layout_height="@dimen/medium_icon_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_next"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="@+id/im_account"
        app:layout_constraintStart_toStartOf="@+id/im_account"
        app:layout_constraintTop_toBottomOf="@+id/im_account" />

</androidx.constraintlayout.widget.ConstraintLayout>